Fixed map stretching.

--- a/styles/components.scss
+++ b/styles/components.scss
@@ -111,6 +111,7 @@
     img {
       display: block;
       width: 100%;
+      height: auto;
     }
   }
 
